DIAC-86 removing duplicated code and updating tests